--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,8 @@
     "/>
     <script src="json2.js"></script>
   </head> 
-  <body bgcolor="white" height="100%" width="100%"> 
+  <body bgcolor="white" height="100%" width="100%">
+    <button onclick="sendClear()">Clear</button>
     <div id="debug"></div>
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
 
@@ -43,6 +44,7 @@ function debug(str) {
 debug("Test");
 
 world = {};
+new_entities = {};
 
 //XXX: TODO Make this prettier!
 function drawCircle(context,entity) {
@@ -80,11 +82,12 @@ function clearFrame() {
 
 // This actually draws the frame
 function renderFrame() {
-    clearFrame();
-    for (var key in world) {
-        var entity = world[key];
+    // clearFrame();  
+    for (var key in new_entities) { // Don't redraw the entire world every time
+        var entity = new_entities[key];
         drawCircle(context,prepEntity(entity));
     }
+    new_entities = {}
 }
 
 var drawNext = true;
@@ -123,12 +126,16 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
+    new_entities[entity] = data;
     drawNextFrame(); // (but should we?)
-    //XXX: Send a XHTML Request that updates the entity you just modified!
+    var json = {entity, data};
+    socket.send(JSON.stringify(json));
 }
 var counter = 0;
+var localID = Math.floor((Math.random()*10000000))
 function addEntityWithoutName(data) {
-    var name = "X"+(counter++)%100;
+    var name = `${Math.floor((Math.random()*10000000))}`;
+    data['client'] = localID;
     addEntity(name,data);
 }
 
@@ -231,16 +238,15 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'white','radius':1});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'white','radius':1});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
-                          'radius':10});
+    addEntityWithoutName({'x':x,'y':y,'colour':'white','radius':1});
 });
 
 
@@ -248,30 +254,42 @@ function update() {
     drawFrame();
 }
 
+function sendClear() {
+    fetch("/clear/")
+}
+
 
 function wsSetup() {
-    var url = "ws://"+host+"/subscribe";   
+    var url = `ws://${host}/subscribe?id=${localID}`;   
     socket = new WebSocket(url);
-    socket.onopen = function() {
-        //XXX: TODO What are you going to do here?
+    socket.onopen = function(event) {
+        // console.log(event)
     };
     socket.onerror = function(msg) {
         debug("WebSocket Error:" + msg.data);
     };
-    socket.onmessage = function(msg) {  
+    socket.onmessage = function(msg) {
         try {
             debug("WebSocket Recv:" + msg.data);
-            //XXX: TODO What are you going to do here?            
+            var msg_j = JSON.parse(msg.data);
+            if (msg_j.msg === "clear") {
+                world = {}
+                clearFrame();
+            }
+            else {
+                world[msg_j.entity] = msg_j.data;
+                new_entities[msg_j.entity] = msg_j.data;
+                drawNextFrame();
+            }
         } catch (e) {
             alert("socket on message: " + e);
         }
-    }; 
+    };
 }
 
 wsSetup();
 
-
-
+clearFrame();
 
 // 30 frames per second
 setInterval( update, 1000/30.0);
